--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     
                 </div>
                 <div class="col-sm-8">
-                    <h2 id="cityRender" class="text-center">City Name</h2>
+                    <h2 id="cityRender" class="text-center">City Name Please Ignore</h2>
                     <div id = "weatherContainer" class = "container">
-                        Weather Container
+                        Weather Container Please Ignore 
                         <ul id="weatherList" class="list-group list-group-flush">
 
                           </ul>
