added 5-day forecast cards which display temp, wind and humidity for the next 5 days

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="col-sm-8">
                 <h2 id="cityRender" class="text-center"></h2>
-                <div id = "currentDate"></div> 
+                <div id="currentDate"></div>
                 <br>
                 <div id="weatherContainer" class="container">
 
@@ -39,9 +39,23 @@
 
                     </ul>
                 </div>
+                <div id="forecastContainer" class="container  no-gutters">
+                    <div id = "cards-row" class="row">
+                        <!-- <div class="col-sm">
+                            <div class="card shadow">
+                                <div class="card-body ">
+                                    <h5 class="card-title">Day 2</h5>
+                                    <ul class="list-group">
+                                        <li class="list-group-item forecast-item">Temp: </li>
+                                        <li class="list-group-item forecast-item">Wind: </li>
+                                        <li class="list-group-item forecast-item">Humidity: </li>
+                                      </ul>
+                                </div>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
             </div>
-
-
         </div>
 
     </div>
@@ -54,5 +68,8 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/script.js" async defer></script>
 </body>
+<footer>
+    Weather data courtesy of openweathermap.org
+</footer>
 
 </html>
