added fade-in and fixed broken buttons (deprecated)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             for any city you search for!</p>
     </div>
     <div class="container">
-        <div class="row">
+        <div id=big-container class="row">
             <div class="col-sm-4" id="searchColumn">
                 <br>
                 <h2 id="searchHeader"> Search For a City</h2>
